- Popup menu's default value; if there isn't the value of them, set first one.
- PayPal support or sort of.
- The Observer Architecture for both client and server.
 (Followings are from INTER-Mediator Study Meeting 2003#1)
- Calendar Component Support.
- Tab Component Support.

=================================
Known Issues for Browsers:
=================================
Internet Explorer 7
- Checkbox and Radio Button doesn't work. Oops! I won't fix it (I can't!).

Internet Explorer 6 or under are NOT supported!
FireFox/Safari/Chrome/Opera will work fine as for HTML5 supported version.
It's hard to check all versions above browsers as you know. I hope you understand.

=================================
Change Log
=================================

Latest changes might exist on the GitHub repository. Please check https://github.com/msyk/INTER-Mediator.

Ver.4.0-dev
- Support FileMaker's portal objects (by specifying 'relation' => array('portal' => true) ).
- New sample (Master-Detail Style Page for FileMaker's portal access version) is added.
- Modify FX.php for FileMaker Server to enable the "fmalt" and retrieve the record id on portal objects.
- Modify FX.php for FileMaker Server to disable the surrogate input patch when using FileMaker Server 12
  (by specifying $dbDataType = 'FMPro12' in params.php).
- Check availability of BC Math functions of PHP. INTER-Mediator requires BC Math for authentication.
- [SECURITY FIX] Database connection information (the 'password' key etc.) in a definition file doesn't send to clients.
- [SECURITY FIX] Fix SQL injection issue when using PDO.
- [INFO] INTER-Mediator requires FileMaker Server 10 or later, OS X v10.6 or later if using FileMaker Server.
- [BUG FIX] Fix DataConverter_FMDateTime and DataConverter_MySQLDateTime's issue on Windows.

Ver.3.9 (2013/9/28)
- The definition file editor works reading/writing. You can call it at the start of logs on debug mode.
- Customize the login panel by CSS definitions.